Fix firefox overflow width problem

--- a/src/bom.scss
+++ b/src/bom.scss
@@ -119,23 +119,24 @@ table.defaultTblView tr th:nth-of-type(1n+5){
     }
 }
 .storeButtons.partsComplete {
-   background: #4caf50;
+   background: transparent;
 }
-.storeButtons.partsComplete:hover {
-    background:#5ACA5E;
-}
+// .storeButtons.partsComplete:hover {
+//     background:#5ACA5E;
+// }
 .storeButtons {
+    box-sizing:border-box;
     margin:1rem 0;
     font-size:16px;
     cursor:pointer;
     display: flex;
     align-items: center;
-    background:#ff9800;
+    background:transparent;
     border-radius:3px;
     border:0;
+    // width:0;
     // border-bottom:1px solid #5A5A5A;
     color:#fff;
-    width:auto;
     justify-content:center;
     // padding: 0.6rem 0.9rem;
     padding:0;
@@ -144,9 +145,9 @@ table.defaultTblView tr th:nth-of-type(1n+5){
         // padding:2rem;
     }
 }
-.storeButtons:hover{
-    background:#FFAA2C;
-}
+// .storeButtons:hover{
+//     background:#FFA219;
+// }
 .columnVisibility{
     font-size:8px;
     font-weight:normal;
@@ -192,7 +193,23 @@ table.defaultTblView tr th:nth-of-type(1n+5){
     // background:#4caf50;
     // border-right: 0.6rem solid #4caf50;
 }
+// .storeButtonInner:hover{
+//     background:purple;
+// }
+.storeButtonInner:hover{
+   background:#FFA219;
+}
+.storeButtonInner.storeButtonInnerComplete:hover{
+    background:#5ACA5E;
+}
+.storeButtonInner{
+    background:#ff9800;
+}
+.storeButtonInner.storeButtonInnerComplete{
+    background: #4caf50;
+}
 .storeButtonInner {
+
     .retailerText{
         flex:1;
         padding:0.6rem 0;
@@ -203,10 +220,14 @@ table.defaultTblView tr th:nth-of-type(1n+5){
         border-bottom: 2px solid #ff9800;
         box-sizing: border-box;
     }
+
     .retailerText.retailerTextComplete {
         border-top: 2px solid #4caf50;
         border-right: 2px solid #4caf50;
         border-bottom: 2px solid #4caf50;
+    }
+    .retailerText.retailerTextComplete:hover {
+
     }
     width:100%;
     display:flex;
